--- a/frontend/src/main/App.css
+++ b/frontend/src/main/App.css
@@ -7,7 +7,7 @@
   --aside-width: 225px;
   --footer-height: 40px;
 
-  --shadow:
+  --shadow: 
     0 2px 23px 0 rgba(0, 0, 0, 0.1),
     0 2px 49px 0 rgba(0, 0, 0, 0.06);
 }
@@ -22,28 +22,28 @@
 .app {
   margin: 0px;
   display: grid;
-  grid-template-columns: var(--aside-width);
-  grid-template-rows: 
+  grid-template-columns: var(--aside-width) 1fr;
+  grid-template-rows:
     var(--header-height)
     1fr
     var(--footer-height);
   grid-template-areas:
     "logo header"
-    "logo content"
-    "logo footer";
+    "menu content"
+    "menu footer";
   height: 100vh;
   background-color: #F5F5F5;
 }
 
 aside.logo {
-  grid-area: menu;
+  grid-area: logo;
 }
 
 header.header {
-  grid-area: header; 
+  grid-area: header;
 }
 
-aise.menu-area {
+aside.menu-area {
   grid-area: menu;
 }
 
